Fix: overflow

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,7 +21,6 @@ body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
   background-color: white;
-  overflow: auto;
 }
 
 *::selection {
